minor alignment fixed on match page

--- a/public/style.css
+++ b/public/style.css
@@ -172,3 +172,6 @@ p {
 #matchbutton {
   margin-top: 300px;
 }
+#seachpanelbody{
+  padding-top: 0px;
+}
